@@ -7,6 +7,7 @@ Please send bfast bug reports to nhomer@cs.ucla.edu
 
 Version 0.1.6
 * bgeneratereads was not producing SNPs and errors properly.
+* bmatches now supresses timing output when -t is not specified.
 
 Version 0.1.5
 * Fixed bug in bpreprocess where the program crashed right before terminating.
